--- a/MyStats/Properties/Resources.resx
+++ b/MyStats/Properties/Resources.resx
@@ -127,8 +127,11 @@
   <data name="Leyla" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Leyla.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\edit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="circle_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\circle_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Aghapng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Aghapng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="edit_35px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_35px1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,8 +139,14 @@
   <data name="xamarin_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\xamarin_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="christal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\christal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Sebine" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sebine.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="edit_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edit_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Jafar PP" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jafar PP.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,19 +154,13 @@
   <data name="Nihad" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Nihad.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Aghapng" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Aghapng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ferman" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ferman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="edit_35px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_35px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Ferman" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ferman.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="christal" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\christal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="circle_25px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\circle_25px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8-edit-64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-edit-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
